# exact-cover-dlx

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  exact_cover.py  main2.py  pyproject.toml  setup.cfg
examples/: basic.py  detailed.py  iq_puzzler_pro_diamond.py  iq_puzzler_pro_pyramid.py  iq_puzzler_pro_rectangular.py  n_queens.py  sudoku.py
src/: exact_cover.py
