[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "exact-cover-dlx"
version = "0.1.0"
description = "Solve exact cover problems using Donald Knuth's Dancing Links technique"
authors = [
  {name = "Brian Woodruff", email = "m.brian.woodruff@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.black]
line-length = 120

[tool.poetry]

[tool.poetry.group.dev.dependencies]
numpy = "^2.2.4"
pytest = "^8.3.5"
